crates/wac-parser/tests/resolution/fail/mismatched-tuple-size.wac
package test:comp;

import x: interface {
    type t = tuple<u8, string, tuple<u32>, u16>;
};

let i = new foo:bar { x };
